--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
     "require-dev": {
         "phpunit/phpunit": "4.7.*",
         "phpdocumentor/phpdocumentor": "2.*"
+    },
+    "require": {
+        "lukaszmakuch/class-based-registry": "^0.0.2"
     }
 }
